[2.0.0-SNAPSHOT] EthHttpClient contract and package refactoring